fix: change default text color to black
I'd rather have it be RESET, as it's more accurate. However, it looks like there's a bug with wrapping lines and formatting codes, where RESET only resets modifiers to what they were at the start of the line.

As I want the resulting books to be compatible with Vanilla Minecraft, I can't fix this. So we'll have to work around it.

--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -4,7 +4,7 @@
     "text.scribble.modifier.underline": "Underline",
     "text.scribble.modifier.strikethrough": "Strikethrough",
     "text.scribble.modifier.obfuscated": "Obfuscated",
-    "text.scribble.color.reset": "Reset",
+    "text.scribble.color.black": "Black",
     "text.scribble.color.dark_gray": "Dark Gray",
     "text.scribble.color.gray": "Gray",
     "text.scribble.color.white": "White",
