feat: add a delete-page button

--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+    "text.scribble.action.delete_page": "Delete page",
     "text.scribble.modifier.bold": "Bold",
     "text.scribble.modifier.italic": "Italic",
     "text.scribble.modifier.underline": "Underline",
