--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "text.scribble.action.delete_page": "Delete page",
+    "text.scribble.action.insert_new_page": "Insert new page",
     "text.scribble.modifier.bold": "Bold",
     "text.scribble.modifier.italic": "Italic",
     "text.scribble.modifier.underline": "Underline",
