--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -1,6 +1,10 @@
 {
     "text.scribble.action.delete_page": "Delete page",
     "text.scribble.action.insert_new_page": "Insert new page",
+    "text.scribble.action.save_book_to_file": "Save book to file...",
+    "text.scribble.action.load_book_from_file": "Load book from file...",
+    "text.scribble.overwrite_warning.title": "Are you sure you want to overwrite this book?",
+    "text.scribble.overwrite_warning.description": "The current contents will be lost forever! (A long time!)",
     "text.scribble.modifier.bold": "Bold",
     "text.scribble.modifier.italic": "Italic",
     "text.scribble.modifier.underline": "Underline",
