--- a/src/main/resources/assets/scribble/lang/zh_tw.json
+++ b/src/main/resources/assets/scribble/lang/zh_tw.json
@@ -2,11 +2,11 @@
     "config.scribble.title": "Scribble 設定",
     "config.scribble.option.copy_formatting_codes": "複製格式碼",
     "config.scribble.description.copy_formatting_codes": "複製或貼上文字時，按住 SHIFT 鍵可以暫時停用此選項。",
-    "config.scribble.option.center_book_gui": "將書籍 GUI 垂直置中",
+    "config.scribble.option.center_book_gui": "將書 GUI 垂直置中",
     "text.scribble.action.delete_page": "刪除頁面",
     "text.scribble.action.insert_new_page": "插入新頁面",
     "text.scribble.action.save_book_to_file": "將書的內容儲存到檔案...",
-    "text.scribble.action.load_book_from_file": "從檔案載入書籍...",
+    "text.scribble.action.load_book_from_file": "從檔案載入書的內容...",
     "text.scribble.overwrite_warning.title": "確定要覆蓋這本書嗎？",
     "text.scribble.overwrite_warning.description": "目前的內容將永遠遺失！（很長一段時間！）",
     "text.scribble.quit_without_saving.title": "確定要退出而不儲存嗎？",
