Repair ru_ru.json

--- a/src/main/resources/assets/scribble/lang/ru_ru.json
+++ b/src/main/resources/assets/scribble/lang/ru_ru.json
@@ -32,5 +32,5 @@
     "text.scribble.color.dark_blue": "Тёмно-синий",
     "text.scribble.color.blue": "Синий",
     "text.scribble.color.dark_purple": "Тёмно-пурпурный",
-    "text.scribble.color.light_purple": "Лавандовый"
+    "text.scribble.color.light_purple": "Пурпурный"
 }
