--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -7,6 +7,8 @@
     "config.scribble.option.edit_history_size": "Undo/redo history size",
     "text.scribble.action.delete_page": "Delete page",
     "text.scribble.action.insert_new_page": "Insert new page",
+    "text.scribble.action.undo": "Undo",
+    "text.scribble.action.redo": "Redo",
     "text.scribble.action.save_book_to_file": "Save book to file...",
     "text.scribble.action.load_book_from_file": "Load book from file...",
     "text.scribble.overwrite_warning.title": "Are you sure you want to overwrite this book?",
