--- a/src/main/resources/assets/scribble/lang/tr_tr.json
+++ b/src/main/resources/assets/scribble/lang/tr_tr.json
@@ -3,11 +3,17 @@
     "config.scribble.option.copy_formatting_codes": "Biçimlendirme kodlarını kopyala",
     "config.scribble.description.copy_formatting_codes": "Bu seçenek, metin kopyalarken veya yapıştırırken SHIFT tuşuna \nbasılarak geçici olarak devre dışı bırakılabilir.",
     "config.scribble.option.center_book_gui": "Kitap arayüzlerini dikey olarak ortala",
+    "config.scribble.option.show_action_buttons": "Eylem düğmelerini göster",
+    "config.scribble.option.show_action_buttons.always": "Her zaman",
+    "config.scribble.option.show_action_buttons.when_editing": "Düzenlerken",
+    "config.scribble.option.show_action_buttons.never": "Hiçbir zaman",
     "config.scribble.option.edit_history_size": "Geri al/yinele geçmiş boyutu",
-    "text.scribble.action.delete_page": "Sayfayı sil",
+    "text.scribble.action.delete_page": "Sayafyı sil",
     "text.scribble.action.insert_new_page": "Yeni sayfa ekle",
+    "text.scribble.action.undo": "Geri al",
+    "text.scribble.action.redo": "Yinele",
     "text.scribble.action.save_book_to_file": "Kitabı dosyaya kaydet...",
-    "text.scribble.action.load_book_from_file": "Dosyadan kitap yükle...",
+    "text.scribble.action.load_book_from_file": "Kitabı dosyadan yükle...",
     "text.scribble.overwrite_warning.title": "Bu kitabın üzerine yazmak istediğinizden emin misiniz?",
     "text.scribble.overwrite_warning.description": "Mevcut içerik sonsuza kadar kaybolacak! (Çok uzun bir süre!)",
     "text.scribble.quit_without_saving.title": "Kaydetmeden çıkmak istediğinizden emin misiniz?",
