--- a/src/main/resources/assets/scribble/lang/de_de.json
+++ b/src/main/resources/assets/scribble/lang/de_de.json
@@ -1,10 +1,17 @@
 {
     "config.scribble.title": "Scribble-Einstellungen",
     "config.scribble.option.copy_formatting_codes": "Formatierungscodes kopieren",
-    "config.scribble.description.copy_formatting_codes": "Diese Option kann vorübergehend deaktiviert werden, indem die Umschalttaste beim Kopieren oder Einfügen von Text gedrückt wird.",
+    "config.scribble.description.copy_formatting_codes": "Diese Option kann vorübergehend deaktiviert werden, indem\ndie Umschalttaste beim Kopieren oder Einfügen von Text gedrückt wird.",
     "config.scribble.option.center_book_gui": "Buch-GUI vertikal zentrieren",
+    "config.scribble.option.show_action_buttons": "Aktionsknöpfe anzeigen",
+    "config.scribble.option.show_action_buttons.always": "Immer",
+    "config.scribble.option.show_action_buttons.when_editing": "Beim bearbeiten",
+    "config.scribble.option.show_action_buttons.never": "Nie",
+    "config.scribble.option.edit_history_size": "Länge der Rückgängig-/Wiederherstellungshistorie",
     "text.scribble.action.delete_page": "Seite löschen",
     "text.scribble.action.insert_new_page": "Neue Seite einfügen",
+    "text.scribble.action.undo": "Rückgängig",
+    "text.scribble.action.redo": "Wiederherstellen",
     "text.scribble.action.save_book_to_file": "Buch in Datei speichern...",
     "text.scribble.action.load_book_from_file": "Buch aus Datei laden...",
     "text.scribble.overwrite_warning.title": "Möchten Sie dieses Buch wirklich überschreiben?",
