--- a/src/main/resources/assets/scribble/lang/ru_ru.json
+++ b/src/main/resources/assets/scribble/lang/ru_ru.json
@@ -3,9 +3,15 @@
     "config.scribble.option.copy_formatting_codes": "Копировать коды форматирования",
     "config.scribble.description.copy_formatting_codes": "Эта опция может быть временно отключена,\nнажав SHIFT при копировании или вставке текста.",
     "config.scribble.option.center_book_gui": "Выравнивать интерфейс книги по вертикали",
+    "config.scribble.option.show_action_buttons": "Показать кнопки действий",
+    "config.scribble.option.show_action_buttons.always": "Всегда",
+    "config.scribble.option.show_action_buttons.when_editing": "При редактировании",
+    "config.scribble.option.show_action_buttons.never": "Никогда",
     "config.scribble.option.edit_history_size": "Размер истории редактирования",
     "text.scribble.action.delete_page": "Удалить страницу",
     "text.scribble.action.insert_new_page": "Вставить новую страницу",
+    "text.scribble.action.undo": "Отменить действие",
+    "text.scribble.action.redo": "Повторить действие",
     "text.scribble.action.save_book_to_file": "Сохранить книгу в файл...",
     "text.scribble.action.load_book_from_file": "Загрузить книгу из файла...",
     "text.scribble.overwrite_warning.title": "Вы уверены, что хотите перезаписать эту книгу?",
@@ -27,7 +33,7 @@
     "text.scribble.color.yellow": "Жёлтый",
     "text.scribble.color.dark_green": "Тёмно-зелёный",
     "text.scribble.color.green": "Зелёный",
-    "text.scribble.color.dark_aqua": "Голубой",
+    "text.scribble.color.dark_aqua": "Тёмно-аквамариновый",
     "text.scribble.color.aqua": "Аквамариновый",
     "text.scribble.color.dark_blue": "Тёмно-синий",
     "text.scribble.color.blue": "Синий",
