--- a/src/main/resources/assets/scribble/lang/zh_cn.json
+++ b/src/main/resources/assets/scribble/lang/zh_cn.json
@@ -1,21 +1,28 @@
 {
-    "config.scribble.title": "写作配置",
+    "config.scribble.title": "Scribble配置",
     "config.scribble.option.copy_formatting_codes": "复制格式化代码",
     "config.scribble.description.copy_formatting_codes": "复制或粘贴文本时\n按住Shift键可暂时禁用该选项。",
-    "config.scribble.option.center_book_gui": "居中书的GUI",
+    "config.scribble.option.center_book_gui": "垂直居中书GUI",
+    "config.scribble.option.show_action_buttons": "显示操作按钮",
+    "config.scribble.option.show_action_buttons.always": "始终",
+    "config.scribble.option.show_action_buttons.when_editing": "编辑时",
+    "config.scribble.option.show_action_buttons.never": "从不",
+    "config.scribble.option.edit_history_size": "撤销/重做历史记录大小",
     "text.scribble.action.delete_page": "删除页面",
-    "text.scribble.action.insert_new_page": "插入页面",
-    "text.scribble.action.save_book_to_file": "将书的内容储存到文件夹……",
-    "text.scribble.action.load_book_from_file": "将储存的内容加载到书里……",
+    "text.scribble.action.insert_new_page": "插入新页面",
+    "text.scribble.action.undo": "撤销",
+    "text.scribble.action.redo": "重做",
+    "text.scribble.action.save_book_to_file": "将书保存到文件…",
+    "text.scribble.action.load_book_from_file": "从文件加载书…",
     "text.scribble.overwrite_warning.title": "你确定要覆盖这本书吗？",
-    "text.scribble.overwrite_warning.description": "当前内容将永远消失！（真的很久！）",
+    "text.scribble.overwrite_warning.description": "当前内容将永久消失！（真的很久！）",
     "text.scribble.quit_without_saving.title": "你确定要不保存就退出吗？",
-    "text.scribble.quit_without_saving.description": "对这本书做的所有更改将会消失！",
+    "text.scribble.quit_without_saving.description": "对这本书所做的更改将会消失！",
     "text.scribble.modifier.bold": "粗体",
     "text.scribble.modifier.italic": "斜体",
     "text.scribble.modifier.underline": "下划线",
     "text.scribble.modifier.strikethrough": "删除线",
-    "text.scribble.modifier.obfuscated": "覆盖",
+    "text.scribble.modifier.obfuscated": "混淆",
     "text.scribble.color.black": "黑色",
     "text.scribble.color.dark_gray": "深灰色",
     "text.scribble.color.gray": "灰色",
