--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -9,7 +9,7 @@
     "config.scribble.option.show_action_buttons.never": "Never",
     "config.scribble.option.edit_history_size": "Undo/redo history size",
     "text.scribble.action.delete_page": "Delete page",
-    "text.scribble.action.insert_new_page": "Insert new page",
+    "text.scribble.action.insert_new_page": "Insert new page\nbefore current",
     "text.scribble.action.undo": "Undo",
     "text.scribble.action.redo": "Redo",
     "text.scribble.action.save_book_to_file": "Save book to file...",
