--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -14,6 +14,7 @@
     "text.scribble.action.redo": "Redo",
     "text.scribble.action.save_book_to_file": "Save book to file...",
     "text.scribble.action.load_book_from_file": "Load book from file...",
+    "text.scribble.action.settings": "Click to open settings...",
     "text.scribble.overwrite_warning.title": "Are you sure you want to overwrite this book?",
     "text.scribble.overwrite_warning.description": "The current contents will be lost forever! (A long time!)",
     "text.scribble.quit_without_saving.title": "Are you sure you want to quit without saving?",
