feat: add back page insert/delete button

--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-    "config.scribble.title": "Scribble Config",
+    "config.scribble.title": "Scribble Settings",
     "config.scribble.option.copy_formatting_codes": "Copy formatting codes",
     "config.scribble.description.copy_formatting_codes": "This option can be temporarily disabled by\npressing SHIFT while copying or pasting text.",
     "config.scribble.option.center_book_gui": "Vertically center book GUI's",
@@ -8,15 +8,16 @@
     "config.scribble.option.show_action_buttons.when_editing": "When editing",
     "config.scribble.option.show_action_buttons.never": "Never",
     "config.scribble.option.edit_history_size": "Undo/redo history size",
-    "text.scribble.action.delete_page": "Delete page",
-    "text.scribble.action.insert_new_page": "Insert new page\nbefore current",
+    "text.scribble.action.delete_page": "Delete this page",
+    "text.scribble.action.insert_new_page": "Insert new page\nbefore this page",
+    "text.scribble.action.insert_new_page_here": "Insert new page here",
     "text.scribble.action.undo": "Undo",
     "text.scribble.action.redo": "Redo",
     "text.scribble.action.save_book_to_file": "Save book to file...",
     "text.scribble.action.load_book_from_file": "Load book from file...",
     "text.scribble.action.settings": "Click to open settings...",
     "text.scribble.overwrite_warning.title": "Are you sure you want to overwrite this book?",
-    "text.scribble.overwrite_warning.description": "The current contents will be lost forever! (A long time!)",
+    "text.scribble.overwrite_warning.description": "The current contents of this book will be lost!",
     "text.scribble.quit_without_saving.title": "Are you sure you want to quit without saving?",
     "text.scribble.quit_without_saving.description": "The changes made to this book will be lost!",
     "text.scribble.modifier.bold": "Bold",
