--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -1,15 +1,7 @@
 {
     "config.scribble.title": "Scribble Settings",
-    "config.scribble.option.copy_formatting_codes": "Copy formatting codes",
-    "config.scribble.description.copy_formatting_codes": "This option can be temporarily disabled by\npressing SHIFT while copying or pasting text.",
-    "config.scribble.option.center_book_gui": "Vertically center book GUI's",
-    "config.scribble.option.show_action_buttons": "Show action buttons",
-    "config.scribble.option.show_action_buttons.always": "Always",
-    "config.scribble.option.show_action_buttons.when_editing": "When editing",
-    "config.scribble.option.show_action_buttons.never": "Never",
-    "config.scribble.option.edit_history_size": "Undo/redo history size",
     "text.scribble.action.delete_page": "Delete this page",
-    "text.scribble.action.insert_new_page": "Insert new page\nbefore this page",
+    "text.scribble.action.insert_new_page": "Insert new page\nbefore this one",
     "text.scribble.action.insert_new_page_here": "Insert new page here",
     "text.scribble.action.undo": "Undo",
     "text.scribble.action.redo": "Redo",
