Update Chinese translations in zh_cn.json

--- a/src/main/resources/assets/scribble/lang/zh_cn.json
+++ b/src/main/resources/assets/scribble/lang/zh_cn.json
@@ -1,21 +1,15 @@
 {
-    "config.scribble.title": "Scribble配置",
-    "config.scribble.option.copy_formatting_codes": "复制格式化代码",
-    "config.scribble.description.copy_formatting_codes": "复制或粘贴文本时\n按住Shift键可暂时禁用该选项。",
-    "config.scribble.option.center_book_gui": "垂直居中书GUI",
-    "config.scribble.option.show_action_buttons": "显示操作按钮",
-    "config.scribble.option.show_action_buttons.always": "始终",
-    "config.scribble.option.show_action_buttons.when_editing": "编辑时",
-    "config.scribble.option.show_action_buttons.never": "从不",
+    "config.scribble.title": "Scribble设置",
+    "text.scribble.action.insert_new_page": "在本页之前\n插入新页",
+    "text.scribble.action.insert_new_page_here": "在此插入新页",
     "config.scribble.option.edit_history_size": "撤销/重做历史记录大小",
-    "text.scribble.action.delete_page": "删除页面",
-    "text.scribble.action.insert_new_page": "插入新页面",
     "text.scribble.action.undo": "撤销",
     "text.scribble.action.redo": "重做",
     "text.scribble.action.save_book_to_file": "将书保存到文件…",
     "text.scribble.action.load_book_from_file": "从文件加载书…",
+    "text.scribble.action.settings": "单击打开设置…",
     "text.scribble.overwrite_warning.title": "你确定要覆盖这本书吗？",
-    "text.scribble.overwrite_warning.description": "当前内容将永久消失！（真的很久！）",
+    "text.scribble.overwrite_warning.description": "这本书的当前内容将会丢失！",
     "text.scribble.quit_without_saving.title": "你确定要不保存就退出吗？",
     "text.scribble.quit_without_saving.description": "对这本书所做的更改将会消失！",
     "text.scribble.modifier.bold": "粗体",
