feat: redesign the config API again

--- a/src/main/resources/assets/scribble/lang/en_us.json
+++ b/src/main/resources/assets/scribble/lang/en_us.json
@@ -1,5 +1,19 @@
 {
     "config.scribble.title": "Scribble Settings",
+    "config.scribble.category.appearance": "Appearance",
+    "config.scribble.option.double_page_viewing": "Double page viewing",
+    "config.scribble.option.center_book_gui": "Center book GUI",
+    "config.scribble.option.show_formatting_buttons": "Show formatting buttons",
+    "config.scribble.option.show_action_buttons": "Show action buttons",
+    "config.scribble.value.show_action_buttons.always": "Always",
+    "config.scribble.value.show_action_buttons.when_editing": "Editing screen only",
+    "config.scribble.value.show_action_buttons.never": "Never",
+    "config.scribble.category.behaviour": "Behaviour",
+    "config.scribble.option.copy_formatting_codes": "Copy formatting codes",
+    "config.scribble.option.edit_history_size": "Edit history limit",
+    "config.scribble.category.miscellaneous": "Miscellaneous",
+    "config.scribble.option.open_vanilla_book_screen_on_shift": "Open vanilla GUIs when holding SHIFT",
+    "text.tapestry.config.reset": "Reset to default value",
     "text.scribble.action.delete_page": "Delete this page",
     "text.scribble.action.insert_new_page": "Insert new page\nbefore this one",
     "text.scribble.action.insert_new_page_here": "Insert new page here",
